# game-of-life-qt

./: .gitignore  CMakeLists.txt  README.md
GameOfLife/: CMakeLists.txt  cell.cpp  cell.h  grid.cpp  grid.h  guimanager.cpp  guimanager.h  guimanager.ui  main.cpp  simulationengine.cpp  simulationengine.h
GameOfLifeTests/: CMakeLists.txt  tst_gameoflifetests.cpp
